# Battleship-game

./: README.md
Battleship/: BattleshipEntities.cpp  BattleshipEntities.h  BoardGenerators.cpp  CMakeLists.txt  Entities.cpp  Entities.h  Input.cpp  Logic.cpp  Logic_copy.cpp  Output.cpp  Output.h  Players.cpp  Players.h  ShipSets.cpp  board_generators.cpp  board_generators.hpp  input.hpp  logic.cpp  logic.hpp  main.cpp  run.sh  ship_sets.hpp
Battleship/include/: board_generators.hpp  entities.hpp  input.hpp  interface.hpp  logic.hpp  output.hpp  players.hpp  ship_sets.hpp
Battleship/src/: board_generators.cpp  entities.cpp  input.cpp  interface.cpp  logic.cpp  output.cpp  players.cpp
Battleship/src/board_generators/: board_generator.hpp  random_board_generator.cpp  random_board_generator.hpp
Battleship/src/entities/: board.cpp  board.hpp  coord.cpp  coord.hpp  figure.cpp  figure.hpp  ship.cpp  ship.hpp
Battleship/src/interface/: console_interface.cpp  console_interface.hpp  interface.hpp
Battleship/src/logic/: logic.cpp  logic.hpp
Battleship/src/modes/: modes.hpp  ship_figures.hpp  ship_set.cpp  ship_set.hpp  ship_sets.cpp  ship_sets.hpp
Battleship/src/players/: live_player.cpp  live_player.hpp  player.cpp  player.hpp  random_player.cpp  random_player.hpp  rectangle_player.cpp  rectangle_player.hpp
Battleship/src/ship_sets/: ship_sets.cpp  ship_sets.hpp
